# xerenity-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: generate_catalog.py
xerenity/: __init__.py  catalog.py
xerenity/connection/: db.py
xerenity/marks/: marks.py
xerenity/search/: series.py
