[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xerenity"
version = "0.3.1"
description = "Librería Python para acceder a datos financieros, series de tiempo y marcas de mercado de la plataforma Xerenity."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andres Velez", email = "a.velez@xerenity.co" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "supabase>=2.4.4",
]

[project.urls]
Homepage = "https://xerenity.vercel.app"
Repository = "https://github.com/avelezX/xerenity-py"
